# hallc_tools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: Doxyfile
examples/auger/: README.md
examples/epics/: epics_test.cxx
examples/fmt/: fmt_test.cxx
examples/json/: json_load.cxx  run_list_1.json
replay/: CMakeLists.txt  README.md
replay/analysis/: coin_online_test.cxx  replay_coin.cxx  replay_production_coin_sidis.cxx  replay_shms.cxx  shms_cherenkovs.cxx  shms_online_test.cxx  shms_production_all.cxx
replay/cmake/: HallCReplayConfig.cmake.in  hallc_config.in  hallc_replay_config.h.in  make_hallc_replay.in  make_hallc_replay_symlinks.in
source/: CMakeLists.txt
source/include/: RunStatus.h  hallc_settings.h
source/include/runplan/: ExperimentMonitor.h  arrange_tables.h  hallc_settings.h
source/src/: ExperimentMonitor.cxx  arrange_tables.cxx  arrange_tables2.cxx  fmt_test.cxx  json_test.cxx  sidis_pion_eg.cxx  sidis_settings_rate.cxx
src/: README.md
src/calibration/: CMakeLists.txt
src/calibration/include/: LinkDef.h  cal_calib.h
src/calibration/include/calibration/: CalorimeterCalibration.h  ShowerCalibrator.h  ShowerTrack.h  THcPShHit.h  THcPShTrack.h  THcPShowerCalib.h
src/calibration/src/: CalorimeterCalibration.cxx  ShowerCalibrator.cxx  ShowerTrack.cxx  THcPShHit.cxx  THcPShTrack.cxx  THcPShowerCalib.cxx  hms_cal_calib.cxx  pcal_calib.cpp  pcal_calib.cxx  shms_cal_calib.cxx
src/csvplan/: CMakeLists.txt
src/csvplan/include/CSV/: Settings.h
src/csvplan/src/: CSVSettings.cxx
src/epics/: CMakeLists.txt
src/epics/include/simple_epics/: PVBuffer.h  PVBufferList.h  PVGetList.h  PVList.h
src/epics/src/: PVBuffer.cxx  PVBufferList.cxx  PVGetList.cpp  PVList.cpp  PVList.cxx
src/monitor/: CMakeLists.txt
src/monitor/include/: LinkDef.h  spectrometer_settings.h
src/monitor/include/monitor/: DetectorDisplay.h  DisplayPlots.h  DisplayServer.h  EventDisplays.h  ExperimentMonitor.h  MonitoringDisplay.h
src/monitor/include/scandalizer/: PostProcessors.h  ScriptHelpers.h  SpectrometerMonitor.h  YieldMonitors.h
src/monitor/src/: DetectorDisplay.cxx  DisplayPlots.cxx  DisplayServer.cxx  EventDisplays.cxx  ExperimentMonitor.cxx  MonitoringDisplay.cxx  PostProcessors.cxx  ScriptHelpers.cxx  SpectrometerMonitor.cxx  YieldMonitors.cxx  angles_vs_run.cxx  clipp.h  experiment_monitor.cxx  make_run_plan.cxx  spectrometer_settings.cxx  test.cxx
src/python/: .gitignore  README.rst  run_list_example.json  setup.py
src/python/hallc/: _test_run_daemon.py  error.py  monitor.py  run_daemon.py
src/python/hallc/tests/: test_hallc.py
src/run_info/: add_run_comment.py  auto_replay.py  run_info.py  run_service.py  run_settings.py  run_status.py
src/runplan/: CMakeLists.txt
src/runplan/include/: LinkDef.h
src/runplan/include/runplan/: CSV_settings.h  RunStatus.h  RunTable.h  arrange_tables.h  hallc_settings.h  sidis_rates.h  sidis_settings_rate.h
src/runplan/src/: LH2_settings_rate.cxx  RunStatus.cxx  RunTable.cxx  arrange_tables.cxx  arrange_tables2.cxx  fmt_test.cxx  hallc_settings.cxx  sidis_pion_eg2.cxx  sidis_rates.cxx  sidis_settings_rate.cxx
src/slack/: README.md  pyslack.py
